// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer block saved block HTML shouldn't change 1`] = `
<div
  className="ugb-spacer"
  style={
    Object {
      "height": "25px",
    }
  }
/>
`;

exports[`Spacer block saved default block HTML shouldn't change 1`] = `
<div
  className="ugb-spacer"
  style={
    Object {
      "height": "50px",
    }
  }
/>
`;
